--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,24 @@
-version: '3.7'
+version: "3.7"
 
 services:
-  web:
-    build: ./
-    command: python manage.py runserver
-    ports:
-      - "8000:8000"
   db:
-    image: postgres:12.11-alpine
+    image: postgres
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - ./data/db:/var/lib/postgresql/data
     environment:
+      - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=hello_django_dev
-  volumes:
-    postgres_data:
+  app:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/usr/src/app/
+    ports:
+      - "8000:8000"
+    environment:
+      - POSTGRES_NAME=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    depends_on:
+      - db
