--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-  app:
+  web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/usr/src/app/
+#    volumes:
+#      - .:/usr/src/app/
     ports:
       - "8000:8000"
     environment:
