--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
   web:
+    volumes:
+      - ./skyeng/media/:/usr/src/app/skyeng/media/
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     ports:
