--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,20 @@ version: "3.7"
 
 services:
   db:
-    image: postgres
+    image: postgres:12.11-alpine
     volumes:
-      - ./data/db:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - db_volume:/var/lib/postgresql/data
+    env_file: ./.env
   web:
     volumes:
-      - ./skyeng/media/:/usr/src/app/skyeng/media/
+      - static_volume:/usr/src/app/skyeng/media/
     build: .
     command: python manage.py runserver 0.0.0.0:8000
+    env_file: ./.env
     ports:
-      - "8000:8000"
-    environment:
-      - POSTGRES_NAME=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - ${PORT}:8000
     depends_on:
       - db
+volumes:
+  db_volume:
+  static_volume:
