fix cron execution in docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,12 @@ services:
       - ${PORT}:8000
     depends_on:
       - db
+  cron:
+    build: .
+    env_file: ./.env
+    depends_on:
+      - db
+    command: cron -f
 volumes:
   db_volume:
   static_volume:
